# trading-platform-portfolio

./: CHANGELOG.md  README.md  pyproject.toml
docs/: ANALYSIS_METHODS.md  DESIGN_SYSTEM.md  DETAILED_SPEC.md  OPTIMIZATION_GUIDE.md  README.md  RISK_MANAGEMENT.md
src/: __init__.py
src/analyzer/: __init__.py
src/optimizer/: __init__.py
